@@ -4,5 +4,6 @@ package edu.colorado.phet.acidbasesolutions.model.bases;
 public interface IWeakBase extends IBase {
     
     public double getStrength(); // Kb
-
+    
+    public String getConjugateAcidSymbol();
 }
